FIX accessibility, contrast, header order, and image project card

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,9 +6,8 @@
 .nav-my-link {
     display: block;
     margin: 0 0.5rem;
-    // color: #0473ea;
-    // color: #007bff;
     font-size: 1.1rem;
+    color: #0071eb;
 }
 #container {
     max-width: min(303px, 90%);
@@ -91,20 +90,6 @@
 
     border-radius: 14px 14px 0 0;
 
-    &:after {
-        display: inline-block;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        border-radius: 14px 14px 0 0;
-        background: linear-gradient(45deg, #00000005 0%, #ffffff00 100%);
-        height: 100%;
-        content: '';
-        /* background: linear-gradient(45deg, #007bff29 0%, #ffffff00 100%);*/
-        /* background: radial-gradient(circle, rgba(255,255,255,0) 35%, rgb(24, 154, 255, 0.28) 100%);*/
-    }
-
     img {
         display: block;
         border-bottom: 1px solid rgba(0, 0, 0, 0.06);
@@ -113,46 +98,18 @@
         object-fit: cover;
         object-position: top center;
     }
-
-    .project-modal-text {
-        a {
-            display: flex;
-            position: relative;
-            justify-content: flex-end;
-            align-items: flex-end;
-            // background: linear-gradient(
-            //     135deg,
-            //     rgba(255, 255, 255, 0) calc(100% - 90px),
-            //     #00000054 calc(100% - 50px),
-            //     rgba(255, 255, 255, 0) 100%,
-            // );
-            width: 100%;
-            height: 100%;
-            text-decoration: none !important;
-        }
-
-        button {
-            padding: 0em 2em;
-            // font-size: 1.2rem;
-        }
-
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        transition: none;
-        opacity: 1;
-        z-index: 1;
-        // transition: all ease-out 0.5s;
-        margin: 0;
-        border-radius: 14px 14px 0 0;
-
-        /* padding: 1em;*/
-        // background-color: #0000004f;
-
-        background-color: transparent;
+    picture:after {
+        display: inline-block;
         width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 14px 14px 0 0;
+        background: linear-gradient(45deg, rgba(0, 0, 100, 0.02) 0%, #ffffff00 100%);
         height: 100%;
+        content: '';
+        /* background: linear-gradient(45deg, #007bff29 0%, #ffffff00 100%);*/
+        /* background: radial-gradient(circle, rgba(255,255,255,0) 35%, rgb(24, 154, 255, 0.28) 100%);*/
     }
 }
 
@@ -167,7 +124,7 @@
         width: 100%;
         content: '';
     }
-    img {
+    .project-image-link {
         position: absolute;
         top: 0;
         right: 0;
@@ -175,21 +132,6 @@
         left: 0;
     }
 }
-
-// @media (pointer: fine) and (hover: hover) {
-//     .img-gradient {
-//         .project-modal-text {
-//             opacity: 0;
-
-//             &:focus-within {
-//                 opacity: 1;
-//             }
-//         }
-//         &:hover .project-modal-text {
-//             opacity: 1;
-//         }
-//     }
-// }
 
 .badge {
     border-color: #cdd6e0 !important;
@@ -237,39 +179,12 @@
     position: absolute;
     right: -1px;
     bottom: -1px;
-    // animation-duration: 6s;
-    // animation-name: pulse;
-    // animation-iteration-count: infinite;
-    
-    /* animation-timing-function: ease-out; */
-    // background-color: #09ff004a;
-    z-index: -1;
+    z-index: 0;
 }
-// .ribbon .ribbon-label {
-//     transform: translateX(-50%) translateY(calc(50%)) rotateZ(-45deg) translateY(50%);
-//     position: absolute;
-//     display: flex;
-//     width: 141.5%;
-//     /* sqrt in 2 * 100% */
-//     text-transform: uppercase;
-//     font-family: sans-serif;
-//     bottom: 50%;
-//     left: 50%;
-//     height: 2em;
-//     font-weight: bolder;
-//     justify-content: center;
-//     align-items: center;
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     letter-spacing: 1px;
-//     text-decoration: none;
 
-//     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3);
-//     transition: none;
-// }
 .card-title {
     margin-bottom: 0.8rem;
+    font-size: 1.25rem;
 }
 
 .card-body {
@@ -288,12 +203,11 @@
     font-size: 1.3rem;
 }
 .sticky-aside {
-    // margin-top: 1rem;
     padding: 10px 0;
 }
 .title {
     color: #007bff;
-    font-size: 1.6rem;
+    font-size: 1.65rem;
     font-weight: bolder;
     text-align: center;
 }
@@ -330,7 +244,6 @@
     }
 }
 main {
-    // max-width: 90%;
     max-width: 1400px;
     margin: 0px auto;
 
@@ -370,6 +283,9 @@ main {
         transform: translate(-50%, 50%);
         z-index: 10;
     }
+}
+.timeline-body .timeline-item .date {
+    color: #6b737f;
 }
 .bio {
     max-width: 800px;
@@ -434,4 +350,11 @@ body {
 
 html {
     padding-left: 0;
+}
+a:focus {
+    outline: 2px solid #007bff;
+    outline-offset: 2px;
+}
+.img-gradient .project-image-link:focus {
+    outline-offset: -2px;
 }
